--- a/app/src/main/res/layout/activity_medication_catalog.xml
+++ b/app/src/main/res/layout/activity_medication_catalog.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/taken"
             android:layout_width="65dp"
             android:layout_height="63dp"
             android:layout_marginStart="16dp"
@@ -28,7 +28,7 @@
             app:srcCompat="@drawable/arrow" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
@@ -38,7 +38,7 @@
             android:textSize="24sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView10"
+            app:layout_constraintStart_toEndOf="@+id/taken"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -51,7 +51,7 @@
         tools:layout_editor_absoluteY="181dp">
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/taken"
             android:layout_width="83dp"
             android:layout_height="81dp"
             android:background="#008F5454"
@@ -60,7 +60,7 @@
             tools:layout_editor_absoluteY="38dp" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Benuron"
