--- a/app/src/main/res/layout/activity_update_medicine.xml
+++ b/app/src/main/res/layout/activity_update_medicine.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/taken"
             android:layout_width="65dp"
             android:layout_height="63dp"
             android:layout_marginStart="16dp"
@@ -59,7 +59,7 @@
             app:srcCompat="@drawable/arrow" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
@@ -69,7 +69,7 @@
             android:textSize="24sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView10"
+            app:layout_constraintStart_toEndOf="@+id/taken"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
