--- a/app/src/main/res/layout/single_notification.xml
+++ b/app/src/main/res/layout/single_notification.xml
@@ -9,19 +9,6 @@
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteY="164dp">
 
-    <ImageView
-        android:id="@+id/taken"
-        android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginRight="13dp"
-        android:layout_marginBottom="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/check" />
-
     <TextView
         android:id="@+id/txtDescription"
         android:layout_width="300dp"
@@ -66,4 +53,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
+
+    <ImageButton
+        android:id="@+id/taken"
+        android:layout_width="60dp"
+        android:layout_height="53dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginRight="19dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/check" />
 </androidx.constraintlayout.widget.ConstraintLayout>
