--- a/app/src/main/res/layout/activity_medication.xml
+++ b/app/src/main/res/layout/activity_medication.xml
@@ -7,7 +7,7 @@
     tools:context=".Medication">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout1"
+        android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="90dp"
         android:layout_marginBottom="16dp"
