--- a/app/src/main/res/layout/activity_medication_catalog.xml
+++ b/app/src/main/res/layout/activity_medication_catalog.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout1"
+        android:id="@+id/header"
         android:layout_width="416dp"
         android:layout_height="90dp"
         android:background="#1D71B8"
