--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -65,13 +65,13 @@
         android:background="#00A1E5"
         android:text="Gerir medicação"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintEnd_toEndOf="@+id/button5"
-        app:layout_constraintStart_toStartOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/badgesList"
+        app:layout_constraintEnd_toEndOf="@+id/badgesList"
+        app:layout_constraintStart_toStartOf="@+id/badgesList"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/badgesList"
         android:layout_width="200dp"
         android:layout_height="0dp"
         android:layout_marginBottom="35dp"
