--- a/app/src/main/res/layout/activity_update_medicine.xml
+++ b/app/src/main/res/layout/activity_update_medicine.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout1"
+        android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="90dp"
         android:layout_marginBottom="205dp"
