--- a/app/src/main/res/layout/activity_badge.xml
+++ b/app/src/main/res/layout/activity_badge.xml
@@ -46,14 +46,14 @@
             android:layout_marginRight="23dp"
             android:layout_marginBottom="19dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/txtMedMedicine"
+            app:layout_constraintEnd_toStartOf="@+id/txtDescription"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.51"
             app:srcCompat="@drawable/arrow" />
 
         <TextView
-            android:id="@+id/txtMedMedicine"
+            android:id="@+id/txtDescription"
             android:layout_width="203dp"
             android:layout_height="34dp"
             android:layout_marginStart="84dp"
