--- a/app/src/main/res/layout/single_medication.xml
+++ b/app/src/main/res/layout/single_medication.xml
@@ -1,26 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout29"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="534dp"
-        android:background="#93C630"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    android:layout_height="90dp"
+    android:background="#FF5757"
+    tools:ignore="MissingConstraints"
+    tools:layout_editor_absoluteY="164dp">
 
         <ImageView
             android:id="@+id/imageView10"
@@ -31,7 +18,7 @@
             android:background="@drawable/btn_medication"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txtDosageHours"
+            app:layout_constraintStart_toEndOf="@+id/txtMedDosageHours"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_hearing_black_48dp" />
 
@@ -48,7 +35,7 @@
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="normal|bold"
-            app:layout_constraintBottom_toTopOf="@+id/txtDescription"
+            app:layout_constraintBottom_toTopOf="@+id/txtMedDescription"
             app:layout_constraintEnd_toStartOf="@+id/imageView10"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -64,7 +51,7 @@
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintBottom_toTopOf="@+id/txtDosageHours"
+            app:layout_constraintBottom_toTopOf="@+id/txtMedDosageHours"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtMedMedicine" />
 
@@ -81,10 +68,10 @@
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintBottom_toTopOf="@+id/txtExpiryDate"
+            app:layout_constraintBottom_toTopOf="@+id/txtMedExpiryDate"
             app:layout_constraintEnd_toStartOf="@+id/imageView10"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/txtMedDescription" />
 
         <TextView
             android:id="@+id/txtMedExpiryDate"
@@ -99,8 +86,6 @@
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtDosageHours" />
+            app:layout_constraintTop_toBottomOf="@+id/txtMedDosageHours" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
