--- a/app/src/main/res/layout/single_notification.xml
+++ b/app/src/main/res/layout/single_notification.xml
@@ -10,7 +10,7 @@
     tools:layout_editor_absoluteY="164dp">
 
     <TextView
-        android:id="@+id/txtMedMedicine"
+        android:id="@+id/txtDescription"
         android:layout_width="300dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -37,7 +37,7 @@
         android:textColor="#FFFFFF"
         android:textSize="23sp"
         android:textStyle="normal|bold"
-        app:layout_constraintBottom_toTopOf="@+id/txtMedMedicine"
+        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,7 +52,7 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtMedMedicine" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
 
     <ImageButton
         android:id="@+id/taken"
