--- a/app/src/main/res/layout/single_medication.xml
+++ b/app/src/main/res/layout/single_medication.xml
@@ -4,39 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout29"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:background="#FF5757"
+    android:layout_height="120dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginBottom="10dp"
+    android:background="#93C630"
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteY="164dp">
 
         <ImageView
             android:id="@+id/imageView10"
-            android:layout_width="0dp"
-            android:layout_height="81dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/btn_medication"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txtMedDosageHours"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_hearing_black_48dp" />
 
         <TextView
             android:id="@+id/txtMedMedicine"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="186dp"
+            android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="159dp"
-            android:layout_marginRight="159dp"
             android:text="Benuron"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="normal|bold"
             app:layout_constraintBottom_toTopOf="@+id/txtMedDescription"
-            app:layout_constraintEnd_toStartOf="@+id/imageView10"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,15 +60,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginEnd="41dp"
-            android:layout_marginRight="41dp"
             android:layout_marginBottom="3dp"
             android:text="Prazo validade: 27/04/2021"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@+id/txtMedExpiryDate"
-            app:layout_constraintEnd_toStartOf="@+id/imageView10"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtMedDescription" />
 
@@ -88,4 +84,4 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtMedDosageHours" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
