--- a/app/src/main/res/layout/single_notification.xml
+++ b/app/src/main/res/layout/single_notification.xml
@@ -5,6 +5,7 @@
     android:id="@+id/constraintLayout29"
     android:layout_width="match_parent"
     android:layout_height="90dp"
+    android:layout_marginBottom="10dp"
     android:background="#FF5757"
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteY="164dp">
@@ -61,6 +62,8 @@
         android:layout_marginEnd="19dp"
         android:layout_marginRight="19dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/btn_notifications"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/check" />
