--- a/app/src/main/res/layout/activity_manage_medication.xml
+++ b/app/src/main/res/layout/activity_manage_medication.xml
@@ -42,58 +42,14 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="362dp"
-        android:layout_height="167dp"
-        android:background="#FFEB3B"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="128dp">
-
-        <TextView
-            android:id="@+id/txtTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Benuron"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp"
-            android:textStyle="normal"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="16dp" />
-
-        <TextView
-            android:id="@+id/txtMedDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2x ao dia "
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:textStyle="normal"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="54dp" />
-
-        <TextView
-            android:id="@+id/txtMedDosageHours"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Prazo validade: 27/04/2021"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:textStyle="normal"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="86dp" />
-
-        <TextView
-            android:id="@+id/txtMedExpiryDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fim de caixa: 27/04/2021"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:textStyle="normal"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="119dp" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvEditMed"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
