--- a/app/src/main/res/layout/activity_list_medications.xml
+++ b/app/src/main/res/layout/activity_list_medications.xml
@@ -34,8 +34,8 @@
 
         <ImageView
             android:id="@+id/taken"
-            android:layout_width="0dp"
-            android:layout_height="63dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="19dp"
@@ -44,9 +44,10 @@
             android:layout_marginBottom="19dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txtTitle"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.51"
+            app:layout_constraintVertical_bias="0.461"
             app:srcCompat="@drawable/arrow" />
 
         <TextView
@@ -65,8 +66,10 @@
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
