--- a/app/src/main/res/layout/activity_ler_etiqueta.xml
+++ b/app/src/main/res/layout/activity_ler_etiqueta.xml
@@ -13,7 +13,8 @@
         android:background="#1D71B8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="wrap_content">
 
         <ImageView
             android:id="@+id/imageView10"
